--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		  understanding and empathetic manner. </p>
         </div>
         <div class="skill-row">
-          <img class="giff2" src="https://media.giphy.com/media/mGo8dkPOF6GLm/giphy.gif" alt="shanking hands gif">
+          <img class="giff2" src="https://media.giphy.com/media/mGo8dkPOF6GLm/giphy.gif" alt="shaking hands gif">
             <h3>Some of the things I work with:</h3>
             <p><div class="clearleft">Abuse, ADD/ADHD, Addiction(s), Adoption, Anger management, Anxiety, Bereavement, Bullying, 
 			Child-Parent conflicts, Child related issues, Cultural conflicts, Cultural issues, Depression, Disability, Dissociation, 
@@ -64,10 +64,7 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2022 HIHS</p>
+     
     </div>
 
   </body>
